# game

backend files/provos/: proof.json
backend files/runnersp1/: Cargo.toml
backend files/runnersp1/src/: main.rs
backend files/sucint/: Cargo.toml
backend files/sucint/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Game.jsx  Menu.jsx  StarsPrank.jsx  Verifier.jsx
